update-manager (1:0.101.1) jaunty; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - catch cache.update() errors that do not raise exceptions

 --

update-manager (1:0.101.0) jaunty; urgency=low

  [ Brian Murray ]
  * UpdateManagerHildon/UpdateManagerHildon.py:
     - wording fix "will be" to "are being" (LP: #338943)
  
  [ Michael Vogt ]
  * UpdateManager/UpdateManagerText.py:
    - fix crash in changelog display (LP: #341577)
      (thanks to Steve Beattie)
    - support NEWS.Debian from the server as well
  * DistUpgrade/DistUpgradeAufs.py:
    - fix in is_submount detection (thanks to liw for reporting)

  [ Gabor Kelemen ]
  * data/glade/UpdateManager.glade:
    - fix missing "translatable" property (LP: #342011)
  
 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 13 Mar 2009 10:09:30 +0100

update-manager (1:0.100.1) jaunty; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - fix crash (LP: #340828) when config is undefinied
  * UpdateManager/UpdateManager.py:
    - explicitely cast time.time() to int (LP: #340755)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 11 Mar 2009 09:10:02 +0100

update-manager (1:0.100) jaunty; urgency=low

  [ Andy Whitcroft ]
  * DistUpgrade/cdromupgrade:
    - if cdromupgrade is run with a relative path we will fail to find the
      installer components and error out.  Ensure that the path is absolute.
      (LP: #335360)

  [ Michael Vogt ]
  * fix crash when help is not avaialble (LP: #338098)
  * data/glade/UpdateManager.glade:
    - remove the "Keep your system up-to-date" text (design team, 
      LP: #336800)
  * fix crash when no network is avaialble for changelog fetching
    (LP: #334002)
  * debian/control:
    - add conflict against update-manager-kde to update-manager-hildon
      (LP: #333464)
  * UpdateManager/Core/MyCache.py:
    - show proper urls for sources with epochs (LP: #328164), thanks
      to Richie
  * UpdateManager/ChangelogViewer.py: