@@ -2,6 +2,9 @@ update-manager (1:0.101.1) jaunty; urgency=low
 
   * DistUpgrade/DistUpgradeCache.py:
     - catch cache.update() errors that do not raise exceptions
+  * DistUpgrade/DistUpgradeController.py:
+    - when calculating the obsolete packages, add extra paranoia
+      for odd network failures (LP: #335154)
 
  --
 
